--- a/config/totem.conf
+++ b/config/totem.conf
@@ -1,1 +1,21 @@
+# Milliseconds of inactivity before entering idle state
+CONFIG_ZMK_IDLE_TIMEOUT=30000
+
+# Enable deep sleep support
+CONFIG_ZMK_SLEEP=y
+# Milliseconds of inactivity before entering deep sleep
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
+
+# Enable eager debouncing
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=7
+
+# Change the following line to enable USB Logging (this increases power usage by a significant amount, turn it off when not in use)
 CONFIG_ZMK_USB_LOGGING=n
+
+# Enable fetching split peripheral battery levels to the central side
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+# Enable central reporting of split battery levels to hosts
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
