--- a/config/totem.conf
+++ b/config/totem.conf
@@ -19,3 +19,5 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+
+CONFIG_ZMK_BATTERY_REPORT_INTERVAL=120
