--- a/config/totem.conf
+++ b/config/totem.conf
@@ -21,3 +21,4 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 
 CONFIG_ZMK_BATTERY_REPORT_INTERVAL=120
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
